<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- For AdMob Ads -->
    <string name="main_activity_top_banner_ad_unit_id">ca-app-pub-6141378478306258/1485899122</string>
    <string name="settings_activity_bottom_banner_ad_unit_id">ca-app-pub-6141378478306258/2962632324</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings&#8230;</string>
    <string name="action_show_splash">About&#8230;</string>

    <string name="app_name">MathQuiz</string>
    <string name="evaluate">Evaluate:</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="negative_numbers">Negative #s</string>
    <string name="submit">Submit</string>
    <string name="problem">Problem</string>
    <string name="solution">Solution?</string>
    <string name="feedback_hint">Enter Solution</string>
    <string name="num_right">RIGHT: 0</string>
    <string name="num_wrong">WRONG: 0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settings_activity_save">Apply</string>
    <string name="clear_statistics">Reset Scores</string>
    <string name="clear_statistics_dialog_positive_button_text">Yes, Reset Scores</string>
    <string name="clear_statistics_dialog_negative_button_text">No, Don\'t Reset Scores</string>
    <string name="clear_statistics_dialog_statistics_cleared_text">Scores have been Reset</string>
    <string name="clear_statistics_dialog_statistics_not_cleared_text">Scores have not been Reset</string>
    <string name="clear_statistics_confirm_title">Confirm Reset Scores&#8230;</string>
    <string name="clear_statistics_confirm_message">Are you sure you want to Reset Scores?</string>

    <string name="airanza_url">&lt;a href="http://www.airanza.com"&gt;www.airanza.com&lt;/a&gt;</string>
    <string name="terms_of_use_url">&lt;a href="http://www.airanza.com/products/apass/tou"&gt;Terms of Use&lt;/a&gt;</string>
    <string name="privacy_policy_url">&lt;a href="http://www.airanza.com/products/apass/privacy"&gt;Privacy Policy&lt;/a&gt;</string>

</resources>
