<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/problem_settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <CheckBox
        android:id="@+id/additionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        />

    <CheckBox
        android:id="@+id/subtractionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/additionCheckBox"
        android:layout_below="@+id/additionCheckBox"
        android:text="@string/subtraction" 
        />

    <CheckBox
        android:id="@+id/multiplicationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/additionCheckBox"
        android:layout_below="@+id/subtractionCheckBox"
        android:text="@string/multiplication"
        />

    <CheckBox
        android:id="@+id/divisionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/additionCheckBox"
        android:layout_below="@+id/multiplicationCheckBox"
        android:text="@string/division"
        />

    <CheckBox
        android:id="@+id/negativeNumbersCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/additionCheckBox"
        android:layout_below="@+id/divisionCheckBox"
        android:text="@string/negative_numbers"
        />
    
    <Button
        android:id="@+id/clearStatisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/negativeNumbersCheckBox"
        android:layout_below="@+id/negativeNumbersCheckBox"
        android:text="@string/clear_statistics"
        />
    
    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/clearStatisticsButton"
        android:layout_below="@+id/clearStatisticsButton"
        android:text="@string/ok"
        />
    
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/okButton"
        android:layout_below="@+id/clearStatisticsButton"
        android:text="@string/cancel"
        />

</RelativeLayout>
